--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "ConnectionStrings": {
+        "SalesWebMvcContext": "server=localhost;user=root;password=Trakinas123.;database=SalesWebMvc"
     }
-  },
-  "AllowedHosts": "*"
 }
